setup.cfg: project urls added. __init__.py: only api module available to end users.

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,9 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/hboukricha/Child_Care_Data
 project_urls =
-    Bug Tracker = https://github.com/pypa/sampleproject/issues
+    src =  https://github.com/hboukricha/Child_Care_Data/tree/main/childcaredatabw
+    docs = https://github.com/hboukricha/Child_Care_Data/tree/main/docs
+    tests = https://github.com/hboukricha/Child_Care_Data/tree/main/tests
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
