--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ author_email = bouricha.hana@gmail.com
 description = API to retrieve child care data in Baden Wuertemberg 
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/hboukricha/Child_Care_Data
+url = https://test.pypi.org/project/childcaredatabw/0.0.4
 project_urls =
     src =  https://github.com/hboukricha/Child_Care_Data/tree/main/childcaredatabw
     docs = https://github.com/hboukricha/Child_Care_Data/tree/main/docs
