Fixed name of state BW

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = childcaredatabw
 version = 0.0.5
 author = Hana Boukricha
 author_email = bouricha.hana@gmail.com
-description = API to retrieve child care data in Baden Wuertemberg 
+description = API to retrieve child care data in Baden-Wurtemberg 
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://test.pypi.org/project/childcaredatabw/0.0.5
