--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,7 +1,7 @@
 # @Author: hana.boukricha
 # @Date:   2021-03-24 21:31:09
 # @Last Modified by:   hana.boukricha
-# @Last Modified time: 2021-03-24 21:51:11
+# @Last Modified time: 2021-03-24 21:59:21
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
@@ -40,4 +40,4 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with unittest
       run: |
-        unittest
+        python -m unittest
