--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,7 @@
+# @Author: hana.boukricha
+# @Date:   2021-03-24 20:47:21
+# @Last Modified by:   hana.boukricha
+# @Last Modified time: 2021-03-24 22:36:24
 # This is a basic workflow to help you get started with Actions
 
 name: CI
@@ -5,10 +9,10 @@ name: CI
 # Controls when the action will run. 
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  #push:
+    #branches: [ main ]
+  #pull_request:
+    #branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
