--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,7 +1,7 @@
 # @Author: hana.boukricha
 # @Date:   2021-03-25 10:33:38
 # @Last Modified by:   hana.boukricha
-# @Last Modified time: 2021-03-26 02:14:46
+# @Last Modified time: 2021-03-26 09:08:36
 # This workflow will upload a Python Package using Twine when a release is created
 # For more information see: https://help.github.com/en/actions/language-and-framework-guides/using-python-with-github-actions#publishing-to-package-registries
 
@@ -34,4 +34,4 @@ jobs:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
-        python -m twine upload --repository testpypi dist/*
+        python -m twine upload --skip-existing --repository testpypi dist/*
